# WinAmp-network-bridge

./: .gitignore  Makefile  README.md  dlltest.sln  host.sln
dlltest/: Makefile  ReadMe.txt  Resource.h  dlltest.cpp  dlltest.pb.cc  dlltest.pb.h  dlltest.proto  dlltest.rc  dlltest.vcxproj  dlltest.vcxproj.filters  stdafx.h
dlltest/winamp/: dsp.h  out.h
host/: .gitignore  InputPlugin.cpp  InputPlugin.h  MainWindow.cpp  MainWindow.h  OutputPlugin.h  Plugin.cpp  Plugin.h  RPCOutputPlugin.cpp  RPCOutputPlugin.h  ReadMe.txt  Resource.h  filelist.h  finally.h  host.aps  host.cpp  host.rc  host.vcxproj  host.vcxproj.filters  util.cpp  util.h
host/include/winamp/: gen.h
host/src/: filelist.cpp  host.cpp  host.sln  host.vcxproj  host.vcxproj.filters  util.cpp  util.h
host/winamp/: ipc_pe.h  wa_dlg.h
hostrs/: Cargo.toml  Makefile  build.bat  run.bat
hostrs/src/: main.rs
plugins/: IN_SNES.HLP  SNESAMP.HLP  SNESamp.cnt  in_nez.ini  plugin.ini
